Update test.lys (#1)

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "Apache 2.0",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/lys-lang/tokenizer/issues"
   },
@@ -19,7 +19,6 @@
   "devDependencies": {
     "@zeit/ncc": "^0.20.5",
     "lys": "next",
-    "mocha": "^6.2.2",
-    "utf8-bytes": "0.0.1"
+    "mocha": "^6.2.2"
   }
 }
