--- a/package.json
+++ b/package.json
@@ -17,8 +17,16 @@
   },
   "homepage": "https://github.com/lys-lang/tokenizer#readme",
   "devDependencies": {
+    "@types/expect": "^24.3.0",
+    "@types/glob": "^7.1.1",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.12.21",
     "@zeit/ncc": "^0.20.5",
+    "expect": "^24.9.0",
+    "glob": "^7.1.6",
     "lys": "next",
-    "mocha": "^6.2.2"
+    "mocha": "^6.2.2",
+    "ts-node": "^8.5.4",
+    "typescript": "^3.7.4"
   }
 }
