--- a/package.json
+++ b/package.json
@@ -17,16 +17,16 @@
   },
   "homepage": "https://github.com/lys-lang/tokenizer#readme",
   "devDependencies": {
-    "@types/expect": "^24.3.0",
+    "@types/expect": "^24.3.2",
     "@types/glob": "^7.1.1",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.12.21",
-    "@zeit/ncc": "^0.20.5",
-    "expect": "^24.9.0",
+    "@vercel/ncc": "^0.38.3",
+    "expect": "^29.7.0",
     "glob": "^7.1.6",
-    "lys": "^0.1.11",
+    "lys": "^0.1.14-20250123143612.commit-4942aa9",
     "mocha": "^6.2.2",
-    "ts-node": "^8.5.4",
-    "typescript": "^3.7.4"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
   }
 }
